--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
                 Done with indoor complaints, libraries, querulous criticisms,
                 Strong and content I travel the open road.</p>
 
-            <a href="https://earthroulette.com/">Explore</a>
+            <a href="Explore.html">Explore</a>
 
         </div>
 
@@ -51,7 +51,7 @@
 
     <div class="menu">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="Index.html">Home</a></li>
             <li><a href="https://news.google.com/topstories" target="_blank">News</a></li>
             <li><a href="https://www.britannica.com/place/Norway" target="_blank">Destinaion</a></li>
             <li><a href="https://www.travel-break.net/" target="_blank">Blog</a></li>
