--- a/Index.html
+++ b/Index.html
@@ -59,7 +59,7 @@
         </ul>
     </div>
 
-    <script>
+    <script defer>
         const menuToggle = document.querySelector('.toggle');
         const showcase = document.querySelector('.showcase');
 
