--- a/Explore.html
+++ b/Explore.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Explore.css">
-    <title>Document</title>
+    <title>EXPLORE</title>
 </head>
 <body>
     <section class="showcase">
@@ -20,6 +20,36 @@
         </div>
         <div class="container">
             <h3 class="item">India</h3>
+            <h3 class="item">Nepal</h3>
+            <h3 class="item">Sri Lanaka</h3>
+            <h3 class="item">France</h3>
+            <h3 class="item">Norway</h3>
+            <h3 class="item">Germany</h3>
+            <h3 class="item">GreenLand</h3>
+            <h3 class="item">Denmark</h3>
+            <h3 class="item">Andmann and Nicobar Islands</h3>
+            <h3 class="item">Thiland</h3>
+            <h3 class="item">Maldives</h3>
+            <h3 class="item">Bejing</h3>
+            <h3 class="item">Britain</h3>
+            <h3 class="item">North Pole</h3>
+            <h3 class="item">Equodor</h3>
+            <h3 class="item">Dubai</h3>
+            <h3 class="item">Swidzerland</h3>
+            <h3 class="item">Urugway</h3>
+            <h3 class="item">Brazil</h3>
+            <h3 class="item">Phillipines</h3>
+            <h3 class="item">Singapore</h3>
+            <h3 class="item">Venice</h3>
+            <h3 class="item">Paris</h3>
+            <h3 class="item">New Zeland</h3>
+            <h3 class="item">North Korea</h3>
+            <h3 class="item">Pakistan</h3>
+            <h3 class="item">Spain</h3>
+            <h3 class="item">Detroit</h3>
+            <h3 class="item">Los Angles</h3>
+            <h3 class="item">South America</h3>
+             <h3 class="item">India</h3>
             <h3 class="item">Nepal</h3>
             <h3 class="item">Sri Lanaka</h3>
             <h3 class="item">France</h3>
